# sdk

docs/: ARCHITECTURE.md  BUILD_CONFIG.md  DEPLOY_KEYS.md  GETTING_STARTED.md  MIGRATION.md  README.md  SECURITY_SCANNING.md  TROUBLESHOOTING.md
js/: config-sdk.js  config-sdk.test.js
rust/: .gitignore  CHANGELOG.md  Cargo.toml  PUBLISHING.md  buildspec.yml
rust/agent/: CHANGELOG.md  Cargo.toml  README.md
rust/agent/proptest-regressions/: error_chain.txt
rust/agent/src/: bridge.rs  component_declaration.rs  credential.rs  error_chain.rs  lib.rs  manifest.rs  sandbox.rs  skill_provider.rs  streaming.rs  system_component.rs  voice.rs
rust/agent/vibecode/: system-prompt.md
rust/assistant/: CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  LICENSE  README.md
rust/assistant/docs/: DEPLOYMENT.md  GETTING_STARTED.md
rust/assistant/examples/: assistant_definition.rs  local_fs_provider.rs  sandbox_compliance.rs  validation.rs
rust/assistant/src/: analytics.rs  build_config.rs  builder.rs  component_manifest.rs  error.rs  health.rs  lib.rs  prelude.rs  security_surface.rs  testing.rs
rust/assistant/templates/: README.md  component-manifest.toml
rust/assistant/tests/: builder_properties.rs  health_properties.rs  round_trip_properties.rs  testing_properties.rs
rust/docs/: CROSS_LANGUAGE_INTEROP.md
rust/model/: CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  README.md
rust/model/docs/: DEPLOYMENT.md  GETTING_STARTED.md  MIGRATION.md  PROVIDER_PATTERNS.md
rust/model/examples/: hot_cold_management.rs  mock_provider.rs  native_provider.rs  ollama_provider.rs  sandbox_compliance.rs
rust/model/src/: analytics.rs  build_config.rs  builder.rs  component_manifest.rs  error.rs  health.rs  lib.rs  prelude.rs  security_surface.rs  testing.rs
rust/model/templates/: README.md  component-manifest.toml
rust/model/tests/: builder_properties.rs  health_properties.rs  round_trip_properties.rs  testing_properties.rs
rust/scripts/: publish.sh  semver-check.sh
rust/skill/: CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  README.md
rust/skill/docs/: DEPLOYMENT.md  GETTING_STARTED.md
rust/skill/examples/: bridge_access.rs  json_stdio_skill.rs  mcp_skill.rs  sandbox_compliance.rs
rust/skill/src/: analytics.rs  build_config.rs  builder.rs  component_manifest.rs  error.rs  health.rs  lib.rs  prelude.rs  sandbox_compliance.rs  security_surface.rs  testing.rs
rust/skill/templates/: README.md  component-manifest.toml
rust/skill/tests/: health_properties.rs  property_tests.rs  round_trip_properties.rs  sandbox_runner_properties.rs  testing_properties.rs
rust/skill/vibecode/: system-prompt.md
rust/system/: CHANGELOG.md  COMPATIBILITY.md  Cargo.toml  README.md
rust/system/docs/: DEPLOYMENT.md  GETTING_STARTED.md
rust/system/examples/: bridge_consumer.rs  cache_component.rs  sandbox_compliance.rs  tts_component.rs
rust/system/src/: analytics.rs  build_config.rs  builder.rs  component_manifest.rs  error.rs  health.rs  lib.rs  prelude.rs  security_surface.rs  testing.rs
rust/system/templates/: README.md  component-manifest.toml  lifesavor-build.yml
rust/system/tests/: analytics_properties.rs  build_properties.proptest-regressions  build_properties.rs  builder_properties.rs  error_properties.rs  health_properties.rs  round_trip_properties.rs  security_properties.rs  testing_properties.rs  tracing_properties.rs
rust/tests-cross-sdk/: Cargo.toml
rust/tests-cross-sdk/src/: lib.rs
rust/tests-cross-sdk/tests/: cross_sdk_properties.rs
schemas/: message-bus-event.json
